2006-05-30  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "HOME: In Layout mode, pressing Home hardkey gives
	undesired response." (Closes N#30818)
	* hildon-navigator/application-switcher.c:
	  - mce_handler(): sensitive check added for as button to block Home
	    key handling

2006-05-30  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hildon-navigator-backup.conf: Fixed typo

2006-05-29  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/application-switcher.c: Fix a crash when a system
	  activity event is received before the AS was completely initialized

2006-05-26  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.6.20

2006-05-26  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Newly seelected applet does not update the overlap
	indication" (Closes N#30911)
	* hildon-home/layout-manager.c: Grab a screenshot of an applet when
	  adding it just in case it is
	  conflicting when the first drag begins to avoid red borders in it

2006-05-26  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-watched-window.c: Added check that the
	  pid value read from the XWindow property is not 0 (Closes N#30602)

2006-05-26  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hildon-navigator-backup.conf: Added osso-backup
	  configuration not to restore the TN plugins watch files
	  (Closes N#26404)

2006-05-26  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/application-switcher.c: Added additional
	  check on the source id before removing the tooltip timeouts
	  (Closes N#30532)

2006-05-24  Johan Bilien <johan.bilien@nokia.com>

	Reapplied fix to "Applet are hidden if a new drag is started before another
	one is ended" (Closes N#30022)
	* hildon-home/layout-manager.c: 
      - Keep track of the last legal position,
	    and move back there if the dropped in an illegal position
	  - Unref the empty drag cursor pixbuf on layoutmode end