@@ -1,5 +1,12 @@
 2006-05-30  Johan Bilien <johan.bilien@nokia.com>
 
+	Applied fix to "Weid application switcher behaviour after Home's Layout
+	mode" (Closs N#29905)
+	* hildon-navigator/hildon-navigator-main.c: do not apply
+	  dimming/undimming recursively
+
+2006-05-30  Johan Bilien <johan.bilien@nokia.com>
+
 	Applied fix to "HOME: In Layout mode, pressing Home hardkey gives
 	undesired response." (Closes N#30818)
 	* hildon-navigator/application-switcher.c:
